After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769140 - _NL_TIME_FIRST_WEEKDAY and _NL_TIME_WEEK_1STDAY are not available on systems not using glibc
_NL_TIME_FIRST_WEEKDAY and _NL_TIME_WEEK_1STDAY are not available on systems ...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
unspecified
Other FreeBSD
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-25 04:17 UTC by Ting-Wei Lan
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
date-chooser: don't reimplement get_first_weekday (1.98 KB, patch)
2016-07-27 04:27 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2016-07-25 04:17:33 UTC
Recent commits on gnome-calendar cause these errors because _NL_TIME_FIRST_WEEKDAY and _NL_TIME_WEEK_1STDAY are GNU extensions.

src/gcal-date-chooser.c:338:34: error: use of undeclared identifier '_NL_TIME_FIRST_WEEKDAY'
src/gcal-date-chooser.c:340:34: error: use of undeclared identifier '_NL_TIME_WEEK_1STDAY'
Comment 1 Ting-Wei Lan 2016-07-27 04:27:47 UTC
Created attachment 332189 [details] [review]
date-chooser: don't reimplement get_first_weekday

Function calendar_get_week_start do the same things with the same code as
function get_first_weekday, so it is better to remove calendar_get_week_start
and switch all the use of calendar_get_week_start to get_first_weekday.

This also fixes build problems on non-glibc systems because get_first_weekday
provides fallback for non-glibc systems.
Comment 2 Georges Basile Stavracas Neto 2016-07-27 04:56:29 UTC
Thanks for working on this issue.

Attachment 332189 [details] pushed as f8a3c77 - date-chooser: don't reimplement get_first_weekday