date-chooser: don't reimplement get_first_weekday

Function calendar_get_week_start do the same things with the same code as
function get_first_weekday, so it is better to remove calendar_get_week_start
and switch all the use of calendar_get_week_start to get_first_weekday.

This also fixes build problems on non-glibc systems because get_first_weekday
provides fallback for non-glibc systems.

https://bugzilla.gnome.org/show_bug.cgi?id=769140